	- some improvements and fixes in the linkport support
	- fixed AI2 (need to be raised whenever a key is pressed)
	- main loop modified: main loop is restarted whenever a new ROM is loaded.
	- fixed main window which appears when the whole window is ready
	- fixed V200 and Titanium crash under Linux (buffer overflow). V200 transfers don't crash
		any more under Windows (probably same bug).

- 20/01/2005, version 1.80k: roms
	- link port is now reset when error occurs: great improvement
	- added support of EA bit ($60000D:2): Titanium work
	- clean-up of linkport support (no more hack)
	- fixed linkport progress bars
	- boosted linkport speed (direct file)

- 12/01/2005, version 1.80j: roms
	- rewrite of the m68k loop:
		* UAE fixed to handle multiple pending interrupts and some other fixes
		* idle mode and STOP improved but problems with ON key
	- fixed grayscale routines: they are now rock-stable !
	- fixed grayscales with HW2
	- implemented 'increment rate' of $600017 port
	- fixed RTC timer ($700014) and port $70001F (RTC enable and 1,2,3,5 irq inhibit).
	- fixed AI3: it was never raised because counter was never incremented

- 03/01/2005, version 1.80i: roms
	- implemented new method for grayscale computing & management (idea from Kevin)
	- clean-up of popup menu (#colors menu removed)
	- grayscales pb with HW2...

- 13/12/2004, version 1.80h: roms
	- simplified skin/keymap management (TI92+ => TI92, TI89t => TI89)
	- simplified ROM image/upgrade access
	- display ROM calls in RAM in the mem panel
	- fixed contrast with TI89
	- fixed grayscale computing but grayscales are still flickering
	- switched to gtk-win32-devel-2.4-rc24.exe package: fix tooltips with toolbars

- 15/11/2004, version 1.80g: roms
	- idle() fixed (port $600005)
	- erase FLASH whenever an OS upgrade is loaded.
	- fixed scrolling of instructions in code window
	- data bkpt at $0 are now caught
	- 'Run to cursor': work with far instructions
	- fixed incrementing of $700014